# distinguish

./: .gitignore  CHANGELOG.md  LICENSE  PROMPT.md  README.md  demo.ipynb  demo_efficientnet.ipynb  demo_efficientnet_alt.ipynb  demo_resnet18.ipynb  demo_resnet18_alt.ipynb  demo_resnet34.ipynb  demo_resnet34_alt.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/similar/: FDA32141.avif
distinguish/: __init__.py  cli.py  data.py  io.py  model.py  predict.py  train.py  utils.py
examples/: classify_example.py  demo.ipynb  minimal_train.py
tests/: test_data.py  test_model_io.py  test_train_smoke.py
