[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distinguish"
version = "0.1.0"
description = "Binary classifier distinguishing real photographs from AI-generated images"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "distinguish", email = "edwardy.liu@mail.utoronto.ca" }]
dependencies = [
	"torch",
	"torchvision",
	"pillow",
	"numpy",
	"tqdm",
	"pandas",
	"click",
]
keywords = [
	"deep-learning",
	"image",
	"classification",
	"pytorch",
	"ai-generated",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Intended Audience :: Developers",
	"Intended Audience :: Science/Research",
	"Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
test = ["pytest"]
dev = ["distinguish[test]", "pylint"]
ipynb = ["matplotlib", "seaborn", "ipykernel", "jupyter", "scikit-learn"]

[project.scripts]
distinguish = "distinguish.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["distinguish*"]
